<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_actions</name>
  <version>0.0.0</version>
  <description>This package only provide information about the msgs that is used</description>
  <maintainer email="mrma19@student.aau.dk">Mads</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
